[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/PlayerObjects/GraviGun.gd" type="Script" id=1]
[ext_resource path="res://scripts/PlayerObjects/BulletTrail.gd" type="Script" id=2]
[ext_resource path="res://sprites/PlayerObjects/bullet.png" type="Texture" id=3]
[ext_resource path="res://sprites/PlayerObjects/demo.png" type="Texture" id=4]
[ext_resource path="res://sounds/FX/Explosion170.wav" type="AudioStream" id=5]
[ext_resource path="res://sprites/Particles/Light64.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="Curve" id=2]
min_value = 0.3
_data = [ Vector2( 0, 0.3 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("bullet:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 2, 4, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("demo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.025, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Trail:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 2, 4, 1 ), Color( 1, 2, 4, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("demo:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.125, 0.15, 0.175 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Light2D:energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="CircleShape2D" id=7]
resource_local_to_scene = true
radius = 17.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 2 )

[sub_resource type="CircleShape2D" id=9]
radius = 3.0

[node name="GraviGun" type="Area2D"]
material = SubResource( 1 )
rotation = 1.5708
collision_layer = 0
collision_mask = 2147483651
script = ExtResource( 1 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -3, 1.23978e-05 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 131

[node name="Trail" type="Line2D" parent="."]
modulate = Color( 1, 2, 4, 1 )
use_parent_material = true
rotation = -1.5708
width = 3.0
width_curve = SubResource( 2 )
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 3 )
end_cap_mode = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="bullet" type="Sprite" parent="."]
modulate = Color( 1, 2, 4, 1 )
use_parent_material = true
texture = ExtResource( 3 )

[node name="demo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
rotation = -1.5708
texture = ExtResource( 4 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 5 )
anims/shot = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )
disabled = true

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 8 )

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 9 )

[node name="Position2D" type="Position2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0
bus = "FX"

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
range_item_cull_mask = 2
shadow_gradient_length = 1.3
__meta__ = {
"_editor_description_": ""
}

[connection signal="body_entered" from="." to="." method="_on_GraviGun_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
